--- a/travel_recom.html
+++ b/travel_recom.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.5">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="travel_recom.css">
     <title>TravelBloom</title>
 </head>
 <body>
     <nav class="navbar">
     <div class="logo">
-        <i class="fa-solid fa-plane"></i>
+        <i class="fa-regular fa-plane"></i>
         <p><i>TravelBloom</i></p>
     </div>
     <div class="menu">
