--- a/travel_recom.html
+++ b/travel_recom.html
@@ -10,8 +10,8 @@
 <body>
     <nav class="navbar">
     <div class="logo">
-        <i class="fa-regular fa-plane"></i>
-        <p><i>TravelBloom</i></p>
+        <i class="fa-sharp-duotone fa-solid fa-plane"></i>
+        <p><i>.TravelBloom.</i></p>
     </div>
     <div class="menu">
        <a href="#Home">Home</a> 
@@ -19,7 +19,7 @@
        <a href="#ContactUs">Contact Us</a> 
     </div>
     <div class="search search-container">
-        <input type="text" placeholder="  Enter a destination or keyword" id="destinationInput" ><i class="fa-solid fa-magnifying-glass"></i>
+        <input type="text" placeholder="  Enter a destination or keyword" id="destinationInput" ><i class="fa-solid fa-magnifying-glass-location"></i>
     <button class="srchBtn" id= "btnSearch" type="submit">Search</button>
     <button class="srchBtn1" id="btnClear" type="button">Clear</button>
     </div>
