--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -51,13 +51,14 @@
         <div class="right">
             <div class="vertical"></div>
             <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-facebook"></i>
+             <i class="fa-brands fa-youtube"></i>
             <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-facebook"></i>
+                 
         </div>
        <div class="aboutTop">
         <h1>About US</h1>
-        <p>Welcome to our Company! We are a team of passionate individuals dedicted to providing excellent services/products to our customers. Our mission is to <br><b>provide the best experience</b>for people traveling to different destinations around the world.<br>Our values include integrity, innovation, cutomer satisfaction and team work. we believe in <b>putting our customers first</b>and <b>working together</b>to achieve <br> our goals <br> Feel free to explore our website to learn more about what we offer!  </p>
+        <p>Welcome to our Company! We are a team of passionate individuals dedicted to providing excellent services/products to our customers.<br><b> Our mission is to provide the best experience for people traveling to different destinations around the world.<br>Our values include integrity, innovation, cutomer satisfaction and team work. <b> We believe in putting our customers first and working together to achieve our goals <br> Feel free to explore our website to learn more about what we offer!  </p>
        </div> 
       <div class="aboutBottom">
         <h1>Our <br>Team</h1>
@@ -75,7 +76,7 @@
         <div class="members">
            
             <div class="member">
-                <div class="icon"> <i class="fa-solid fa-user"></i></div>
+                <div class="icon"> <i class="fa-sharp fa-solid fa-user"></i>
                 <div class="details">
                     <h4>John Doe</h4>
                     <p>John Doe is responsible <br>for....</p>
