--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -80,7 +80,7 @@
                 <div class="details">
                     <h4>Celina Thomas</h4>
                     <p>Celina Thomas is responsible <br>for....</p>
-                    <button>CEO</button>
+                    <button>Team Lead</button>
                 </div>
             </div>
         </div>
@@ -90,8 +90,8 @@
                 <div class="icon"><i class="fa-sharp-duotone fa-solid fa-user"></i></div>
                 <div class="details">
                     <h4>Anderson</h4>
-                    <p>John Doe is responsible <br>for....</p>
-                    <button>CEO</button>
+                    <p>Anderson is responsible <br>for....</p>
+                    <button>Delivery Head</button>
                 </div>
             </div>
         </div>
@@ -103,13 +103,13 @@
         <div class="contact-container">
         <div class="right">
             <div class="vertical"></div>
-            <i class="fa-brands fa-twitter"></i>
+           <i class="fa-brands fa-x-twitter"></i>
+            <i class="fa-brands fa-square-youtube"></i>
+            <i class="fa-brands fa-square-instagram"></i>
             <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-youtube"></i>
         </div>
         <div class="contact-details">
-            <h1>Contact Us</h1>
+            <h1>Contact Us <br>Get in Touch</h1>
             <div class="form">
             <form action="">
                 <label for="">Name:</label> <br>
@@ -127,6 +127,6 @@
     </div>
     
    
-<script src="app.js"></script>    
+<script src="travel_recommendation.js"></script>    
 </body>
 </html>
